# killercoda

./: BUILD.bazel  README.md  WORKSPACE  shell.nix  structure.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: killercoda.yml
bazel/: providers.bzl  structure.json
bazel/introduction/foundamentals/: labels.md  repositories.md  workspaces.md
bazel/introduction/hello-world/: hello-world-bash.md  setup-project.md  setup-project.verify.sh
courses/: BUILD.bazel
courses/bazel/: BUILD.bazel
courses/bazel/introduction/: BUILD.bazel
courses/bazel/introduction/foundamentals/: BUILD.bazel  targets.md
courses/bazel/introduction/hello-world/: BUILD.bazel
courses/bazel/introduction/install-bazel/: BUILD.bazel  install-bazelisk.verify.sh
courses/bazel/java/: BUILD.bazel  index.json
courses/bazel/java/code/com/example/binary/: BUILD  HelloWorld.java
introduction/: BUILD.bazel  index.json  what-is-bazel.md  why-bazel.md
introduction/foundamentals/: BUILD.bazel  workspaces.md
introduction/hello-world/: BUILD.bazel  hello-world-bazel.verify.sh
introduction/install-bazel/: BUILD.bazel
tutorials/: BUILD.bazel
tutorials/bazel/: BUILD.bazel
tutorials/bazel/introduction/: BUILD.bazel  index.json
tutorials/bazel/introduction/foundamentals/: BUILD.bazel  packages.md
tutorials/bazel/introduction/hello-world/: BUILD.bazel  hello-world-bash.verify.sh  hello-world-bazel.md
tutorials/bazel/introduction/install-bazel/: BUILD.bazel  install-bazel.md  install-bazelisk.md
tutorials/introduction/: BUILD.bazel
tutorials/introduction/foundamentals/: BUILD.bazel
tutorials/introduction/hello-world/: BUILD.bazel
tutorials/introduction/install-bazel/: BUILD.bazel
