load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "pkg_filegroup")

pkg_files(
    name = "bazelisk",
    srcs = [
        "@bazelisk_linux_amd64//file",
    ],
    renames = {
        "@bazelisk_linux_amd64//file": "bazelisk",
    },
)

pkg_filegroup(
    name = "bins",
    srcs = [
        ":bazelisk",
    ],
    prefix = "bins",
)

pkg_tar(
    name = "courses",
    srcs = [
        "structure.json",
        "//courses/bazel",
        ":bins",
    ],
    visibility = ["//visibility:public"],
)