load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

pkg_files(
    name = "srcs",
    srcs = [
        "structure.json",
    ],
)

pkg_filegroup(
    name = "bazel",
    prefix = "bazel",
    srcs = [
        ":srcs",
        "//courses/bazel/introduction",
    ],
    visibility = ["//visibility:public"],
)