load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

pkg_files(
    name = "introduction_srcs",
    srcs = [
        "index.json",
        "what-is-bazel.md",
        "why-bazel.md",
    ],
    prefix = "tutorials/introduction",
)

pkg_filegroup(
    name = "introduction",
    srcs = [
        ":introduction_srcs",
        "//tutorials/introduction/foundamentals",
        "//tutorials/introduction/hello-world",
        "//tutorials/introduction/install-bazel",
    ],
    visibility = ["//visibility:public"],
)