load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

pkg_files(
    name = "introduction_srcs",
    srcs = [
        "index.json",
        "what-is-bazel.md",
        "why-bazel.md",
    ],
)

pkg_filegroup(
    name = "introduction",
    srcs = [
        ":introduction_srcs",
        "//courses/bazel/introduction/foundamentals",
        "//courses/bazel/introduction/hello-world",
        "//courses/bazel/introduction/install-bazel",
    ],
    prefix = "introduction",
    visibility = ["//visibility:public"],
)