load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "pkg_filegroup")

pkg_files(
    name = "bazelisk",
    srcs = [
        "@bazelisk_linux_amd64//file",
    ],
    renames = {
        "@bazelisk_linux_amd64//file": "bazelisk",
    },
)

pkg_filegroup(
    name = "assets",
    srcs = [
        ":bazelisk",
    ],
    prefix = "assets",
)

pkg_files(
    name = "srcs",
    srcs = [
        "index.json",
        "placeholder.md",
    ],
)

pkg_filegroup(
    name = "java",
    srcs = [
        ":srcs",
        ":bazelisk",
    ],
    prefix = "java",
    visibility = ["//visibility:public"],
)