load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

pkg_files(
    name = "introduction_srcs",
    srcs = [
        "index.json",
        "what-is-bazel.md",
        "why-bazel.md",
    ],
)

pkg_filegroup(
    name = "introduction",
    srcs = [
        ":introduction_srcs",
        "//tutorials/bazel/introduction/foundamentals",
        "//tutorials/bazel/introduction/hello-world",
        "//tutorials/bazel/introduction/install-bazel",
    ],
    prefix = "introduction",
    visibility = ["//visibility:public"],
)